[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.isort]
line_length = 119
profile = "black"
skip_gitignore = true
known_third_party = ["wandb"]

[tool.mypy]
ignore_missing_imports = true
install_types = true
pretty = true
non_interactive = true

[tool.ruff]
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ICN", # flake8-import-conventions
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "W", # pycodestyle
    "N", # pep8-naming
    "ERA", # eradicate
    "PL", # pylint
]
ignore = [
    "E501", # line length violation
    "C901", # `function_name` is too complex
]
line-length = 88

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.isort]
lines-after-imports = 2

[tool.ruff.pycodestyle]
max-doc-length = 88

[tool.ruff.pydocstyle]
convention = "numpy"
